[package]
name = "luatos-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serialport = { version = "4", features = ["usbportinfo-interface"] }
sevenz-rust2 = { version = "0.20", features = ["compress"] }
sha2 = "0.10"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
chrono = "0.4"
crossterm = "0.28"
hex = "0.4"
regex = "1"
tempfile = "3"

[build-dependencies]
cc = "1"
